--- a/Downloads/MyVueCourse/package.json
+++ b/Downloads/MyVueCourse/package.json
@@ -18,13 +18,15 @@
     "lucide-vue-next": "^0.479.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.0.14",
     "vite": "^6.2.2",
     "vite-plugin-vue-devtools": "^7.7.2"
